fix swagger final?
